// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns raw schema column information > rawColumns 1`] = `
[
  {
    "dataType": "NUMBER",
    "defaultValue": ""ZODDBS"."ISEQ$$_72365".nextval",
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": true,
    "maxLen": 22,
    "name": "ID",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
  {
    "dataType": "VARCHAR2",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "maxLen": 400,
    "name": "NAME",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
  {
    "dataType": "VARCHAR2",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 1020,
    "name": "EMAIL",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
  {
    "dataType": "VARCHAR2",
    "defaultValue": "'active'",
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 80,
    "name": "STATUS",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
  {
    "dataType": "JSON",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 8200,
    "name": "PROFILE",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
  {
    "dataType": "TIMESTAMP(6) WITH TIME ZONE",
    "defaultValue": "CURRENT_TIMESTAMP",
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 13,
    "name": "CREATED_AT",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
  {
    "dataType": "VARCHAR2",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 80,
    "name": "ROLES",
    "schemaName": "ZODDBS",
    "tableName": "USERS",
    "tableType": "table",
  },
]
`;

exports[`returns schema models > userTable 1`] = `
{
  "columns": [
    {
      "dataType": "NUMBER",
      "defaultValue": ""ZODDBS"."ISEQ$$_72365".nextval",
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": true,
      "isWritable": false,
      "isWriteOptional": true,
      "maxLen": 22,
      "name": "ID",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "number",
    },
    {
      "dataType": "VARCHAR2",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": 400,
      "name": "NAME",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "VARCHAR2",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 1020,
      "name": "EMAIL",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "VARCHAR2",
      "defaultValue": "'active'",
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 80,
      "name": "STATUS",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "JSON",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 8200,
      "name": "PROFILE",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "json",
    },
    {
      "dataType": "TIMESTAMP(6) WITH TIME ZONE",
      "defaultValue": "CURRENT_TIMESTAMP",
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 13,
      "name": "CREATED_AT",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "date",
    },
    {
      "dataType": "VARCHAR2",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 80,
      "name": "ROLES",
      "schemaName": "ZODDBS",
      "tableName": "USERS",
      "tableType": "table",
      "type": "string",
    },
  ],
  "name": "USERS",
  "schemaName": "ZODDBS",
  "type": "table",
}
`;
